deploy: f34d488586fc00c3d516df72fc204483a86c4afa

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="ch00-00-introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="ch01-00-bio-overview.html"><strong aria-hidden="true">1.</strong> BIO</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="ch00-00-introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="ch00-00-rtl-overview.html"><strong aria-hidden="true">1.</strong> RTL</a></li><li class="chapter-item expanded "><a href="ch01-00-bio-overview.html"><strong aria-hidden="true">2.</strong> BIO</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,13 +142,15 @@
 in TSMC22ULL, it has a 400MHz Vexriscv RV32-IMAC CPU with Sv39 (virtual memory) support,
 along with 2MiB of integrated SRAM and 4MiB of integrated RRAM. RRAM is non-volatile
 memory analogous to FLASH.</p>
+<p>The full part number is BAO1X2S4F-WA, but the part will be referred to as the &quot;Baochip-1x&quot;
+or the &quot;bao1x&quot; interchangeably.</p>
 <p>More docs to come.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="next" href="ch01-00-bio-overview.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="ch00-00-rtl-overview.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -157,7 +159,7 @@ memory analogous to FLASH.</p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="next" href="ch01-00-bio-overview.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="ch00-00-rtl-overview.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
