--- a/ch00-00-introduction.html
+++ b/ch00-00-introduction.html
@@ -142,9 +142,10 @@
 in TSMC22ULL, it has a 400MHz Vexriscv RV32-IMAC CPU with Sv39 (virtual memory) support,
 along with 2MiB of integrated SRAM and 4MiB of integrated RRAM. RRAM is non-volatile
 memory analogous to FLASH.</p>
-<p>The full part number is BAO1X2S4F-WA, but the part will be referred to as the &quot;Baochip-1x&quot;
+<p>The full part number is BAO1X2S4F-WA, but the part is referred to as the &quot;Baochip-1x&quot;
 or the &quot;bao1x&quot; interchangeably.</p>
-<p>More docs to come.</p>
+<p>This book is a work in progress.</p>
+<p><img src="./images/soc-top-diagram.png" alt="SoC block diagram" /></p>
 
                     </main>
 
